--- a/zillow.ipynb
+++ b/zillow.ipynb
@@ -113,7 +113,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# first drop duplicate columns from the query\n",
+    "# first drop duplicate columns from the query so we don't run into any issues\n",
     "df = df.loc[:, ~df.columns.duplicated()]"
    ]
   },
@@ -3080,6 +3080,7 @@
     }
    ],
    "source": [
+    "# let's take a look at value counts via my function\n",
     "wrangle.value_counts(df, df.columns)"
    ]
   },
@@ -3145,6 +3146,8 @@
     }
    ],
    "source": [
+    "# we can see from this visual that these two columns are the same\n",
+    "\n",
     "plt.figure(figsize=(16,5))\n",
     "plt.subplot(121)\n",
     "plt.hist(df.fips)\n",
@@ -3179,6 +3182,8 @@
     }
    ],
    "source": [
+    "# these two columns are also very similar so we only need to keep one\n",
+    "\n",
     "plt.figure(figsize=(16,5))\n",
     "plt.subplot(121)\n",
     "plt.hist(df.fullbathcnt)\n",
@@ -3213,6 +3218,8 @@
     }
    ],
    "source": [
+    "# these appear different so both can be kept\n",
+    "\n",
     "plt.figure(figsize=(16,5))\n",
     "plt.subplot(121)\n",
     "plt.hist(df.structuretaxvaluedollarcnt, bins=3)\n",
@@ -3247,6 +3254,8 @@
     }
    ],
    "source": [
+    "# these two coumns appear different\n",
+    "\n",
     "plt.figure(figsize=(16,5))\n",
     "plt.subplot(121)\n",
     "plt.hist(df.landtaxvaluedollarcnt, bins=3)\n",
@@ -3281,6 +3290,9 @@
     }
    ],
    "source": [
+    "# these two are definitely different but also don't tell us much. We will definitely drop regionidcounty since\n",
+    "# it is the same as fips\n",
+    "\n",
     "plt.figure(figsize=(16,5))\n",
     "plt.subplot(121)\n",
     "plt.hist(df.regionidcounty)\n",
@@ -3588,8 +3600,10 @@
     "    - roomcnt (most inputs are 0)\n",
     "    - assessmentyear since all entries are 2016\n",
     "- Drop mobile homes and town homes because this because an issue during splitting data since the amount is so low.\n",
+    "- Dropped rows with Ventura as county since there were only two.\n",
     "- Renamed my columns to be more legible.\n",
-    "- Added a home_age, abs_logerr, and price_per_sqft column\n",
+    "- Added a home_age, abs_logerr, quadrimester, and price_per_sqft column\n",
+    "- Scaled my continuous columns.\n",
     "- Split my data for exploration."
    ]
   },
@@ -3620,7 +3634,7 @@
     }
    ],
    "source": [
-    "# Take a look at a heatmap of correlation to logerror\n",
+    "# Take a look at a heatmap of correlation to absolute logerror\n",
     "plt.figure(figsize=(8,12))\n",
     "value_heatmap = sns.heatmap(train_scaled.corr()[['abs_logerr']].sort_values(by='abs_logerr', ascending=True), cmap=\"RdBu\", vmin=-.5, vmax=.5, annot=True)\n",
     "value_heatmap.set_title('Feautures Correlating with Absolute Logerror')\n",
@@ -4452,6 +4466,8 @@
     }
    ],
    "source": [
+    "# create a loop through the columns for visuals of variables with logerror\n",
+    "\n",
     "cols = train_scaled.columns\n",
     "for i in cols:\n",
     "    print('Logerror versus', i)\n",
@@ -4459,21 +4475,6 @@
     "    plt.xlabel(i)\n",
     "    plt.ylabel('Absolute Logerror')\n",
     "    plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# cols = train_scaled.columns\n",
-    "# for i in cols:\n",
-    "#     print('Absolute Logerror versus', i)\n",
-    "#     sns.jointplot(x=i, y='abs_logerr', data=train_scaled, color='#9b59b6')\n",
-    "#     plt.xlabel(i)\n",
-    "#     plt.ylabel('Absolute Logerror')\n",
-    "#     plt.show()"
    ]
   },
   {
@@ -4524,7 +4525,7 @@
     }
    ],
    "source": [
-    "# which k to choose?\n",
+    "# which k to choose? use a graph to utilize the elbow method\n",
     "\n",
     "X = train_scaled[['home_age', 'tax_rate']]\n",
     "with plt.style.context('seaborn-whitegrid'):\n",
@@ -4555,7 +4556,7 @@
     }
    ],
    "source": [
-    "# visualize k for tax value and square feet\n",
+    "# visualize k for tax rate and home age\n",
     "fig, axs = plt.subplots(2, 2, figsize=(13, 13), sharex=True, sharey=True)\n",
     "\n",
     "for ax, k in zip(axs.ravel(), range(2, 6)):\n",
@@ -4633,10 +4634,76 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "${H_0}$ = The mean absolute logerror for the first two clusters == mean absolute logerror for last two clusters.\n",
+    "\\\n",
+    "${H_a}$ = The mean absolute logerror for the first two clusters != mean absolute logerror for last two clusters."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.019456824829215028, 0.02992910427424726)"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# set our confidence level\n",
+    "conf_int = .95\n",
+    "\n",
+    "# assign our alpha based on confidence level\n",
+    "alpha = 1 - conf_int\n",
+    "\n",
+    "# set up my samples\n",
+    "sample1 = train_scaled[train_scaled['age_tr_cluster']<3].abs_logerr\n",
+    "sample2 = train_scaled[train_scaled['age_tr_cluster']>2].abs_logerr\n",
+    "\n",
+    "# let's check the variance to confirm equality\n",
+    "sample1.var(), sample2.var()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "We reject the null hypothesis\n"
+     ]
+    }
+   ],
+   "source": [
+    "stats.ttest_ind(sample1, sample2, equal_var=False)\n",
+    "\n",
+    "\n",
+    "if (p < alpha) & (t > 0):\n",
+    "    print(\"We reject the null hypothesis\")\n",
+    "else:\n",
+    "    print(\"We fail to reject the null hypothesis\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "**Takeaways:**\n",
     "\\\n",
     "    - This appears to be a useful set of clusters we can use for our model.\n",
-    "    - Cluster 3 appears to have the highest correlation to tax_rate."
+    "    \\\n",
+    "    - Cluster 3 appears to have the highest correlation to tax_rate.\n",
+    "    \\\n",
+    "    - Statistics tests confirms this may be a useful feature for our model."
    ]
   },
   {
@@ -4787,10 +4854,76 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "${H_0}$  = The mean absolute logerror for the first cluster == mean absolute logerror for second.\n",
+    "\\\n",
+    "${H_a}$ = The mean absolute logerror for the first cluster != mean absolute logerror for the second cluster."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.02095039047275988, 0.013653268852784041)"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# set our confidence level\n",
+    "conf_int = .95\n",
+    "\n",
+    "# assign our alpha based on confidence level\n",
+    "alpha = 1 - conf_int\n",
+    "\n",
+    "# set up my samples\n",
+    "sample1 = train_scaled[train_scaled['lat_ppsqft_cluster']==1].abs_logerr\n",
+    "sample2 = train_scaled[train_scaled['lat_ppsqft_cluster']==2].abs_logerr\n",
+    "\n",
+    "# let's check the variance to confirm equality\n",
+    "sample1.var(), sample2.var()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "We reject the null hypothesis\n"
+     ]
+    }
+   ],
+   "source": [
+    "stats.ttest_ind(sample1, sample2, equal_var=False)\n",
+    "\n",
+    "\n",
+    "if (p < alpha) & (t > 0):\n",
+    "    print(\"We reject the null hypothesis\")\n",
+    "else:\n",
+    "    print(\"We fail to reject the null hypothesis\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "**Takeaways:**\n",
     "\\\n",
     "    - This set of cluster may not have much going on here.\n",
+    "    \\\n",
     "    - A heatmap may tell us more.\n",
+    "    \\\n",
+    "    - Statistics tests confirms this may be a useful feature for our model.\n",
     "    "
    ]
   },
@@ -4942,9 +5075,74 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "${H_0}$  = The mean absolute logerror for the first three clusters == mean absolute logerror for last two clusters.\n",
+    "\\\n",
+    "${H_a}$ = The mean absolute logerror for the first three clusters != mean absolute logerror for last two clusters."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.02136148040062951, 0.017504878618435995)"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# set our confidence level\n",
+    "conf_int = .95\n",
+    "\n",
+    "# assign our alpha based on confidence level\n",
+    "alpha = 1 - conf_int\n",
+    "\n",
+    "# set up my samples\n",
+    "sample1 = train_scaled[train_scaled['tx_amount_val_cluster']<4].abs_logerr\n",
+    "sample2 = train_scaled[train_scaled['tx_amount_val_cluster']>3].abs_logerr\n",
+    "\n",
+    "# let's check the variance to confirm equality\n",
+    "sample1.var(), sample2.var()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "We reject the null hypothesis\n"
+     ]
+    }
+   ],
+   "source": [
+    "stats.ttest_ind(sample1, sample2, equal_var=False)\n",
+    "\n",
+    "\n",
+    "if (p < alpha) & (t > 0):\n",
+    "    print(\"We reject the null hypothesis\")\n",
+    "else:\n",
+    "    print(\"We fail to reject the null hypothesis\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "**Takeaways:**\n",
     "\\\n",
-    "    - While this is a messy set of clusters, this may be of use here for modeling."
+    "    - While this is a messy set of clusters, this may be of use here for modeling.\n",
+    "    \\\n",
+    "    - Statistics tests confirms this may be a useful feature for our model."
    ]
   },
   {
@@ -5159,7 +5357,7 @@
     }
    ],
    "source": [
-    "# Take a look at a heatmap of correlation to tax value\n",
+    "# Take a look at a heatmap of correlation to logerror\n",
     "plt.figure(figsize=(8,12))\n",
     "value_heatmap = sns.heatmap(train_scaled.corr()[['abs_logerr']].sort_values(by='abs_logerr', ascending=True), cmap=\"RdBu\", vmin=-.5, vmax=.5, annot=True)\n",
     "value_heatmap.set_title('Feautures Correlating with Absolute Logerror')\n",
@@ -5228,7 +5426,7 @@
     }
    ],
    "source": [
-    "# Take another look at a heatmap of correlation to logerror\n",
+    "# Take another look at a heatmap of correlation to logerrorv i\n",
     "plt.figure(figsize=(8,12))\n",
     "value_heatmap = sns.heatmap(train_scaled.corr()[['abs_logerr']].sort_values(by='abs_logerr', ascending=True), cmap=\"RdBu\", vmin=-.5, vmax=.5, annot=True)\n",
     "value_heatmap.set_title('Feautures Correlating with Absolute Logerror')\n",
@@ -5472,7 +5670,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Model 3 (Polynomial Regression)"
+    "### Model #3 (Polynomial Regression)"
    ]
   },
   {
@@ -5527,7 +5725,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Model 4 (Polynomial Regression)"
+    "### Model #4 (Polynomial Regression)"
    ]
   },
   {
@@ -5662,7 +5860,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Test Model 3**"
+    "### **Test Model 3**"
    ]
   },
   {
