--- a/zillow.ipynb
+++ b/zillow.ipynb
@@ -40,7 +40,7 @@
     "from sklearn.preprocessing import PolynomialFeatures\n",
     "\n",
     "from sklearn.metrics import mean_squared_error, r2_score, explained_variance_score\n",
-    "from sklearn.feature_selection import f_regression, SelectKBest, RFE\n",
+    "from sklearn.feature_selection import f_regression\n",
     "\n",
     "from scipy import stats\n",
     "\n",
@@ -5458,13 +5458,13 @@
    "metadata": {},
    "source": [
     "### Explore Takeaways:\n",
-    "- Use asolute log error to visualize correlations between dependent and independent variables using heatmaps.\n",
+    "- Use absolute log error to visualize correlations between dependent and independent variables using heatmaps.\n",
     "- Used jointplots to visualize correlations and possible clusters.\n",
     "- Created three clusters:\n",
     "    - Home Age v. Tax Rate\n",
     "    - Latitude v. Finished Sqft\n",
     "    - Tax Amount v. Structure Tax Value\n",
-    "- Used statistical testing to assess how to bin columns.\n",
+    "- Used statistical testing on clusters and to help assess how to bin columns.\n",
     "- Binned bedroom and bathroom columns."
    ]
   },
@@ -5974,7 +5974,7 @@
     "- I acquired and prepped my data accordingly by addressing nulls and outliers and removing duplicate columns.\n",
     "- I was able to explore through visualizations and statistical testing to help pin point drivers of log error.\n",
     "- I also utilized custering methods to create clusters to use in modeling.\n",
-    "- I created four models in addition to the baseline using the mean average of log error.\n",
+    "- I created four models in addition to the baseline.\n",
     "- In the end, Model 3 using Polynomial Regressor narrowly beat the baseline model.\n",
     "- Model 3 did perform very well on the unseen test data set with RMSE of .14.\n",
     "\n",
